# Nociones-Clave-Carlos-Garcia

./: CMakeLists.txt  README.md
Proyecto 1/: Persona.cpp  Persona.h  main.cpp
Proyecto 2/: funciones.h  main.cpp  matematicas.cpp  matematicas.h
Proyecto 3/: funciones.h  main.cpp  matematicas.cpp  matematicas.h
